--- a/css/isTriangle.css
+++ b/css/isTriangle.css
@@ -1,8 +1,4 @@
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+
 .container{
     display: flex;
     flex-direction: column;
@@ -13,12 +9,12 @@ body{
 }
 .container label{
     font-size: 1.5rem;
+    font-weight: 600;
 }
 .container input{
     background-color: white;
     color: #000;
     padding: 0.2rem 0.5rem;
-    border-radius: 1rem;
     font-size: 1.5rem;
     border: 2px solid black;
     text-align: center;
@@ -32,7 +28,7 @@ body{
     padding: 0.5rem 1rem;
     text-transform: uppercase;
 }
-h4{
+h3{
     margin-top: 3vh;
     font-size: 1.5rem;
 
