--- a/css/triangleQuiz.css
+++ b/css/triangleQuiz.css
@@ -1,8 +1,4 @@
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+
 h1{
     margin: 2vh 0;
 }
@@ -11,7 +7,7 @@ form{
     font-weight: 600;
 }
 form .question-container{
-    margin: 0.5rem 0;
+    margin: 0.5rem 1rem;
 }
 form .question-container input{
     transform: scale(1.5);
