--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
 body{
     background-color: #f0e0e0;
     color: #222;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
 }
 nav{
     height: 15vh;
@@ -19,7 +24,7 @@ nav{
 nav p{
     color: #ff9800;
     font-size: 2rem;
-    font-weight: 400;
+    font-weight: 700;
     margin: 0 1rem;
 }
 nav ul{
@@ -34,9 +39,9 @@ nav li a{
     font-size: 1.2rem;
     font-weight: 400;
     text-decoration: none;
+    border-radius: 1rem;
     margin: 0 1rem;
     padding: 1rem 1rem;
-    border-radius: 1rem;
 }
 nav a:hover{
     background: #ff9800;
@@ -46,4 +51,69 @@ nav a.active{
     background: #ff9800;
     color: #000;
 }
-  
+nav #menubar{
+    color: #ff9800;
+    font-size: 2rem;
+    margin: 0 2vw;
+    display: none;
+    cursor: pointer;
+}
+nav #click{
+    display: none;
+}
+@media (max-width: 1050px){
+    nav ul{
+        display: block;
+        align-items: center;
+        position: fixed;
+        top: 100px;
+        left: -100%;
+        background-color: #000;
+        height: 100vh;
+        width: 100%;
+        transition: all 0.3s ease;
+    } 
+    nav ul li{
+        margin: 5vh 0;
+        text-align: center;
+    }
+    nav ul li a{
+        display: block;
+        font-size: 1.5rem;
+        font-weight: 600;
+    }
+    nav li a:hover,
+    nav li a.active{ 
+        background-color: #000;
+        color: #ff9800;
+    }
+    nav #menubar{
+        display: inline;
+    }
+    #click:checked ~ul{
+        left: 0%;
+    }
+}
+
+.footer{
+    height: 15vh;
+    background-color: #000;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.footer ul{
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+}
+.footer ul a{
+    text-decoration: none;
+    background-color: #fff;
+    color: #000;
+    padding: 20px 20px;
+    font-size: 2rem;
+    border-radius: 50%;
+}
