--- a/style.css
+++ b/style.css
@@ -109,11 +109,21 @@ nav #click{
     align-items: center;
     width: 50%;
 }
-.footer ul a{
-    text-decoration: none;
+.footer ul li{
     background-color: #fff;
-    color: #000;
-    padding: 20px 20px;
     font-size: 2rem;
     border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+}
+.footer ul a{
+    color: #000;
+    text-decoration: none;
+}
+.footer ul li:hover{
+    background-color: #ff9800;
+}
+.footer ul a:hover{
+    color: #fff;
 }
