--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 100vh;
 }
 nav{
     height: 15vh;
@@ -63,10 +62,12 @@ nav #click{
 }
 @media (max-width: 1050px){
     nav ul{
+        z-index: 2;
         display: block;
         align-items: center;
         position: fixed;
-        top: 100px;
+        margin-top: 15vh;
+        top: 0;
         left: -100%;
         background-color: #000;
         height: 100vh;
