--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 nav{
     height: 15vh;
-    width: 100%;
+    width: 100vw;
     background-color: #000;
     display: flex;
     justify-content: space-between;
@@ -60,6 +60,38 @@ nav #menubar{
 nav #click{
     display: none;
 }
+.footer{
+    height: 15vh;
+    background-color: #000;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+.footer ul{
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+}
+.footer ul li{
+    background-color: #fff;
+    font-size: 2rem;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+}
+.footer ul a{
+    color: #000;
+    text-decoration: none;
+}
+.footer ul li:hover{
+    background-color: #ff9800;
+}
+.footer ul a:hover{
+    color: #fff;
+}
 @media (max-width: 1050px){
     nav ul{
         z-index: 2;
@@ -94,37 +126,7 @@ nav #click{
     #click:checked ~ul{
         left: 0%;
     }
-}
-
-.footer{
-    height: 15vh;
-    background-color: #000;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-.footer ul{
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    width: 50%;
-}
-.footer ul li{
-    background-color: #fff;
-    font-size: 2rem;
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    text-align: center;
-}
-.footer ul a{
-    color: #000;
-    text-decoration: none;
-}
-.footer ul li:hover{
-    background-color: #ff9800;
-}
-.footer ul a:hover{
-    color: #fff;
+    .footer ul{
+        width: 70%;
+    }
 }
