--- a/css/areaOfTriangle.css
+++ b/css/areaOfTriangle.css
@@ -1,8 +1,10 @@
-h1{
-    margin: 2vh 0;
+.container{
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 18vh;
 }
 img{
-    height: 40vh;
+    height: 30vh;
 }
 div{
     margin: 2vh 0;
@@ -10,8 +12,10 @@ div{
 div label{
     font-size: 1.2rem;
     font-weight: 600;
+    display: block;
 }
 div input{
+    width: 100%;
     font-size: 1.2rem;
     font-weight: 600;
     padding: 0.2rem 0.5rem;
@@ -21,13 +25,15 @@ div input{
     background-color: #ff9800;
     color:  #000;
     font-size: 1.5rem;
-    margin-top: 5vh;
     border: none;
     padding: 0.5rem 1rem;
     text-transform: uppercase;
 }
-
+.btn-container{
+    margin-top: 2vh;
+    text-align: center;
+}
 h3{
-    margin: 3vh 0;
+    margin: 2vh 0;
     font-size: 1.5rem;
 }
