--- a/css/isTriangle.css
+++ b/css/isTriangle.css
@@ -2,18 +2,21 @@ body{
     height: 100vh;
 }
 .container{
-    display: flex;
-    flex-direction: column;
-    margin-top: 5vh;
+    max-width: 600px;
+    margin-top: 18vh;
+    margin-left: auto;
+    margin-right: auto;
 }
 .container h1{
     margin-bottom: 2vh;
 }
 .container label{
+    display: block;
     font-size: 1.5rem;
     font-weight: 600;
 }
 .container input{
+    width: 100%;
     background-color: white;
     color: #000;
     padding: 0.2rem 0.5rem;
@@ -34,4 +37,7 @@ h3{
     margin-top: 3vh;
     font-size: 1.5rem;
 
+}
+.btn-container {
+    text-align: center;
 }
