--- a/css/triangleQuiz.css
+++ b/css/triangleQuiz.css
@@ -2,24 +2,27 @@ body{
     height: 100vh;
 }
 h1{
-    margin: 2vh 0;
+    margin-top: 18vh;
 }
 form{
     font-size: 1.5rem;
     font-weight: 600;
+    margin: 2vh auto;
+    max-width: 600px;
 }
 form .question-container{
     margin: 0.5rem 1rem;
+    text-align: justify;
 }
-form .question-container input{
+form .question-container input {
     transform: scale(1.5);
     margin: 0 0.5rem;
+   
 }
 #answer{
     background-color: #ff9800;
     color:  #000;
     font-size: 1.5rem;
-    margin-top: 5vh;
     border: none;
     padding: 0.5rem 1rem;
     text-transform: uppercase;
