--- a/style.css
+++ b/style.css
@@ -30,8 +30,6 @@ nav p{
 nav ul{
     display: flex;
     justify-content: space-between;
-}
-nav li{
     list-style: none;
 }
 nav li a{
@@ -64,18 +62,17 @@ nav #click{
 .footer{
     height: 15vh;
     background-color: #000;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
+    width: 100%;
 }
 .footer ul{
-    display: flex;
+    max-width: 90%;
+    margin: 3vh auto;
     list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    width: 50%;
+    text-align: center;
 }
 .footer ul li{
+    display: inline-block;
+    margin-right: 1rem;
     background-color: #fff;
     font-size: 2rem;
     border-radius: 50%;
@@ -95,7 +92,6 @@ nav #click{
 }
 @media (max-width: 1050px){
     nav ul{
-        z-index: 2;
         display: block;
         align-items: center;
         position: fixed;
@@ -129,5 +125,6 @@ nav #click{
     }
     .footer ul{
         width: 70%;
+        margin: 3vh auto;
     }
 }
