--- a/css/areaOfTriangle.css
+++ b/css/areaOfTriangle.css
@@ -1,5 +1,5 @@
 .container{
-    max-width: 600px;
+    width: 600px;
     margin: 0 auto;
     margin-top: 18vh;
 }
@@ -36,4 +36,10 @@ div input{
 h3{
     margin: 2vh 0;
     font-size: 1.5rem;
+}
+
+@media (max-width: 1050px) {
+    .container {
+        width: 80%;
+    }
 }
