--- a/css/hypotenuse.css
+++ b/css/hypotenuse.css
@@ -10,12 +10,14 @@ div{
 }
 div label{
     font-size: 1.5rem;
-    font-weight: 600
+    font-weight: 600;
+    display: block;
 }
 div input{
     padding: 0 0.5rem;
     font-size: 1.2rem;
     border: 2px solid #000;
+    width: 100%;
 }
 #submit{
     background-color: #ff9800;
