--- a/css/areaOfTriangle.css
+++ b/css/areaOfTriangle.css
@@ -20,6 +20,7 @@ div input{
     font-weight: 600;
     padding: 0.2rem 0.5rem;
     border: 2px solid #000;
+    text-align: center;
 }
 #submit{
     background-color: #ff9800;
