--- a/css/hypotenuse.css
+++ b/css/hypotenuse.css
@@ -18,6 +18,7 @@ div input{
     font-size: 1.2rem;
     border: 2px solid #000;
     width: 100%;
+    text-align: center;
 }
 #submit{
     background-color: #ff9800;
