--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 9;
 }
 nav p{
     color: #ff9800;
